PR kern/40110: null, overlay and umap modules loading -> panic (layerfs symbols not there)